# medintel-ai

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 045c55037950_add_visit_entities_table.py  65e992a271e0_create_patients_visits_visit_chunks.py
backend/app/: config.py  main.py
backend/app/api/: patients.py  query.py
backend/app/core/: chunking.py  embeddings.py  entities.py  ingestion.py  query_classifier.py  reasoning.py  reranking.py  retrieval.py  risk_detection.py  structured_query.py  temporal_resolver.py
backend/app/models/: __init__.py  patient.py  visit.py  visit_chunk.py  visit_entity.py
backend/app/schemas/: query.py
backend/scripts/: __init__.py  ingest_synthetic.py  verify_compare_visits.py  verify_query_classifier.py  verify_risk_detection.py  verify_temporal_resolver.py  verify_trend_over_time.py
brain/52642964-2e1a-41d8-a874-bedb768e197a/scratch/: smoke_test.py
data/: drug_interactions.json
data/synthetic/: sarah_chen_visits.json
docs/: known-issues-and-resolutions.md  project-status.md
frontend/: .dockerignore  package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/patients/: page.tsx
frontend/app/patients/[id]/: page.tsx
frontend/app/patients/[id]/timeline/: page.tsx
frontend/app/query/: page.tsx
frontend/components/: compare-evidence.tsx  risk-alerts-card.tsx  trend-chart-view.tsx
frontend/components/ui/: badge.tsx  separator.tsx
frontend/lib/: api.ts
