[project]
name = "medintel-backend"
version = "0.1.0"
description = "MedIntel AI backend"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.0",
    "sqlalchemy==2.0.36",
    "alembic==1.13.3",
    "psycopg[binary]==3.2.3",
    "pgvector==0.3.6",
    "python-multipart==0.0.12",
    "sentence-transformers==3.2.1",
    "torch==2.5.0",
    "numpy==1.26.4",
    "langchain==0.3.7",
    "langchain-openai==0.2.6",
    "langchain-core==0.3.15",
    "scispacy==0.5.4",
    "spacy==3.7.5",
    "negspacy==1.0.4",
    "en_core_sci_sm @ https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.5.4/en_core_sci_sm-0.5.4.tar.gz",
    "en_ner_bc5cdr_md @ https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.5.4/en_ner_bc5cdr_md-0.5.4.tar.gz",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "httpx==0.27.2",
    "ruff==0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
